--- a/bluebronna/about/locations.html
+++ b/bluebronna/about/locations.html
@@ -12,42 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light noselect">
-    <a class="navbar-brand" href="../index.html">
-        <img src="../static/img/bbwc_logo.png" width="120" height="42" class="d-inline-block align-top" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-dropdown" id="adventureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Upcoming Adventures
-                </a>
-                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
-                    <a class="dropdown-item" href="../upcoming-adventures/schedule.html">Schedule</a>
-                    <a class="dropdown-item" href="../upcoming-adventures/events.html">Events</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-dropdown" id="aboutUsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    About Us
-                </a>
-                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
-                    <a class="dropdown-item" href="../about/history.html">History</a>
-                    <a class="dropdown-item active" href="../about/locations.html">Locations</a>
-                    <!-- <a class="dropdown-item" href="../about/stories.html">Stories</a> -->
-                    <a class="dropdown-item" href="../about/faq.html">Frequently Asked Questions</a>
-                    <a class="dropdown-item" href="../about/contact-us.html">Contact Us</a>
-                </div>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="../volunteer/index.html">Volunteer</a></li>
-            <li class="nav-item"><a class="nav-link" href="../volunteer/needs.html">Needs</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
-        </ul>
-    </div>
-</nav>
+<nav id="navigation"></nav>
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4 bb-gray font-weight-bold">Three Site Locations for the Best Camp Experience</h1>
@@ -67,12 +32,12 @@
                 <p>The Willow Creek site has flush toilets, showers, and food is prepared in a commercial kitchen. Our wall tents have a wood stove and most have wood floors to keep you warm and dry. During our winter camps, cabins are available for accommodation.</p>
             </div>
             <div class="col-xs-12">
-            <ul>
-                <li><i class="fas fa-check-circle"></i> wall tents, wood floors, & wood stoves</li>
-                <li><i class="fas fa-check-circle"></i> commercial kitchen</li>
-                <li><i class="fas fa-check-circle"></i> barn & riding arena</li>
-                <li><i class="fas fa-check-circle"></i> showers & bathroom facilities</li>
-                <li><i class="fas fa-check-circle"></i> cabins available for winter camps</li>
+            <ul class="bulletless">
+                <li class="bulletless"><i class="fas fa-check-circle"></i> wall tents, wood floors, & wood stoves</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> commercial kitchen</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> barn & riding arena</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> showers & bathroom facilities</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> cabins available for winter camps</li>
             </ul>
         </div>
             <div class="col-xs-12">
@@ -99,11 +64,11 @@
                 <p>All meals are cooked over an open fire. The dining area and fire pit area are covered to keep out the weather and there is almost always a cheerful fire burning and hot coffee. With log corrals for the horses and the river gushing in the background, you will be able to forget about all the hustle and bustle of daily life.</p>
             </div>
             <div class="col-xs-12">
-                <ul>
-                    <li><i class="fas fa-check-circle"></i> wilderness campsite</li>
-                    <li><i class="fas fa-check-circle"></i> wall tents with wood stoves</li>
-                    <li><i class="fas fa-check-circle"></i> outdoor wood-fire cooking</li>
-                    <li><i class="fas fa-check-circle"></i> outhouses</li>
+                <ul class="bulletless">
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> wilderness campsite</li>
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> wall tents with wood stoves</li>
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> outdoor wood-fire cooking</li>
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> outhouses</li>
                 </ul>
             </div>
             <div class="col-xs-12">
@@ -131,9 +96,9 @@
             </div>
             <div class="col-xs-12">
                 <ul class="bulletless">
-                    <li><i class="fas fa-check-circle"></i> adventure campsite</li>
-                    <li><i class="fas fa-check-circle"></i> covered sleeping area</li>
-                    <li><i class="fas fa-check-circle"></i> campfire cooking</li>
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> adventure campsite</li>
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> covered sleeping area</li>
+                    <li class="bulletless"><i class="fas fa-check-circle"></i> campfire cooking</li>
                 </ul>
             </div>
             <div class="col-xs-12">
@@ -149,61 +114,12 @@
     </div>
 </div>
 <div id="footer" class="container-fluid">
-    <div class="row col-md-12">
-        <div class="col-md-4 mb-2">
-            <h3 class="font-weight-bold">About Us</h3>
-            <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
-            <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
-            <p><img src="../static/img/member_logo.png"/></p>
-        </div>
-        <div class="col-md-4 mx-auto mb-3">
-            <h3 class="font-weight-bold">Other Links</h3>
-            <ul>
-                <li><a class="contact-text" href="../index.html" target="_self"><i class="fas fa-caret-right"></i> Home</a></li>
-                <li><a class="contact-text" href="../volunteer/needs.html" target="_self"><i class="fas fa-caret-right"></i> Needs</a></li>
-                <li><a class="contact-text" href="../volunteer/index.html" target="_self"><i class="fas fa-caret-right"></i> Volunteer</a></li>
-                <li><a class="contact-text" href="../about/contact-us.html" target="_self"><i class="fas fa-caret-right"></i> Contact Us</a></li>
-                <li><a class="contact-text" href="../privacy-policy/index.html" target="_self"><i class="fas fa-caret-right"></i> Privacy Policy</a></li>
-                <li><a class="contact-text" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/" target="_self"><i class="fas fa-caret-right"></i> Register</a></li>
-
-
-            </ul>
-        </div>
-        <div class="col-md-4 mb-2">
-            <h5 class="font-weight-bold">Contact Us</h5>
-            <div>
-                <p>
-                    <i class="fas fa-phone bb-darkblue"></i><a class="contact-text" href="tel:403-803-4776"> (403)803-4776</a>
-                </p>
-            </div>
-            <div>
-                <p>
-                    <i class="fas fa-envelope bb-darkblue"></i><a class="contact-text" href="mailto:Office@BlueBronna.org" target="_blank"> office@bluebronna.org</a>
-                </p>
-            </div>
-            <div class="mb-2">
-                <p><i class="fas fa-home bb-darkblue"></i> Box 65, Longview, AB T0L 1H0</p>
-            </div>
-            <div>
-                <a class="bb-darkblue media-icon" href="https://www.facebook.com/bluebronna" target="_blank">
-                    <i class="fab fa-facebook-square fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://www.instagram.com/bluebronnawildernesscamp/" target="_blank">
-                    <i class="fab fa-instagram fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://twitter.com/BlueBronna" target="_blank">
-                    <i class="fab fa-twitter-square fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://www.linkedin.com/company/blue-bronna-wilderness-camp" target="_blank">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright text-center py-3 small">
-        Copyright 2019 Created by <a target="_blank" href="http://www.czmoody.com">Curtis Zim Moody</a>.
-    </div>
 </div>
+<script>
+    var THIS_NAV = "locations";
+    var ROOT_PATH = "..";
+    var STATIC_PATH = ROOT_PATH + "/static/";
+</script>
 <script src="../static/js/base.js"></script>
 </body>
 </html>
