--- a/bluebronna/upcoming-adventures/father-daughter-horse-camp.html
+++ b/bluebronna/upcoming-adventures/father-daughter-horse-camp.html
@@ -12,55 +12,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light noselect">
-    <a class="navbar-brand" href="../index.html">
-        <img src="../static/img/bbwc_logo.png" width="120" height="42" class="d-inline-block align-top" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-dropdown" id="adventureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Upcoming Adventures
-                </a>
-                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
-                    <a class="dropdown-item active" href="../upcoming-adventures/schedule.html">Schedule</a>
-                    <a class="dropdown-item" href="../upcoming-adventures/events.html">Events</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-dropdown" id="aboutUsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    About Us
-                </a>
-                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
-                    <a class="dropdown-item" href="../about/history.html">History</a>
-                    <a class="dropdown-item" href="../about/locations.html">Locations</a>
-                    <!-- <a class="dropdown-item" href="../about/stories.html">Stories</a> -->
-                    <a class="dropdown-item" href="../about/faq.html">Frequently Asked Questions</a>
-                    <a class="dropdown-item" href="../about/contact-us.html">Contact Us</a>
-                </div>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="../volunteer/index.html">Volunteer</a></li>
-            <li class="nav-item"><a class="nav-link" href="../volunteer/needs.html">Needs</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
-        </ul>
-    </div>
-</nav>
-<div class="container-fluid hero special-needs-family-camp-hero mb-5">
+<nav id="navigation"></nav>
+<div class="container-fluid hero father-daughter-hero mb-5">
     <div class="row">
         <div class="upper-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Special Adventures</p>
+                    <p class="text-white font-weight-bold">Father/Daughter Horse Camp</p>
                 </div>
             </div>
         </div>
         <div class="lower-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Father-Daughter Horse Camp - July 25 to 28</p>
+                    <p class="text-white font-weight-bold">July 23rd to 26th, 2020</p>
                 </div>
             </div>
         </div>
@@ -69,27 +34,31 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="font-weight-bold bb-gray">Father-Daughter Horse Camp</h1>
-            <p>Minimum Age for Daughters is 14 at the time of the camp.</p>
-            <p>Dad, this is your chance to build memories of a lifetime with your daughter(s).  Our day trips will take you either along the Livingstone Range or the Continental Divide. </p>
-            <p>Once you arrive at the scenic destination you will grow in your teamwork together as you help set up and keep camp running.</p>
+            <h1 class="font-weight-bold bb-gray">Father/Daughter Horse Camp</h1>
+            <p>Blue Bronna is all about creating an environment where dads and daughters spend time together and are encouraged in their relationship with each other and with God.</p>
+            <p>Something special happens when you spend time with your daughter at Blue Bronna.</p>
+            <p>You laugh. You play. You connect. You create memories only you can share.</p>
+            <p>Join us for this specially designed weekend for you and your girl where the deep love between parent and child can grow and the love of our Heavenly Father can shine.</p>
+            <p>During the weekend you will ride, do chores together, ride, participate in singing and teaching times, meals, walks, worship and growing and did we mention riding!! Please join us as you invest in the life of your daughter. Our day trips will take you either along the Livingstone Range or the Continental Divide.</p>
+            <p>Any combination of men and girls are welcome; it’s not just for fathers and daughters. Daughters bring your dad, grandfather, or an uncle and spend some quality time together!</p>
             <p>Expect to participate in:</p>
             <ul>
-                <li><i class="fas fa-check-circle"></i> Riding Horses Everyday - of course!</li>
-                <li><i class="fas fa-check-circle"></i> Starting Campfires</li>
-                <li><i class="fas fa-check-circle"></i> Gathering and Purifying Water</li>
-                <li><i class="fas fa-check-circle"></i> Setting Up Tarps for Sleeping</li>
-                <li><i class="fas fa-check-circle"></i> Setting Up The “Kitchen”</li>
-                <li><i class="fas fa-check-circle"></i> Chop Wood</li>
-                <li><i class="fas fa-check-circle"></i> Camp Chores - washing dishes and cooking</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Riding Horses Everyday - of course!</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Starting Campfires</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Gathering and Purifying Water</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Setting Up Tarps for Sleeping</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Setting Up The “Kitchen”</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Chop Wood</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Camp Chores - washing dishes and cooking</li>
             </ul>
-            <p>Each day (weather permitting) you will ride through the mountains and enjoy stunning views together. If you are eager you may also get a hike in! You will sing and enjoy evening campfire sessions encountering God. Did we mention how good food tastes cooked in cast iron over an open fire? This will be a trip you and your daughters won’t forget.</p>
-            <p><strong>Arrival: </strong> 10am Thursday</p>
+            <p>All meals, snacks, and accommodations are included in the camp fee. The food sure tastes cooked in cast iron over an open fire.</p>
+            <p>Open to ages 14 to 88!</p>
+            <p><strong>Start Time: </strong> 2pm Thursday</p>
             <p><strong>Departure: </strong> 2pm Sunday</p>
-            <p><strong>Cost: </strong> $350 for the adult, $200 for each daughter, Family max is $600.</p>
+            <p><strong>Cost: </strong> $250 for the adult, $200 for each daughter, Family max is $600.</p>
             <p class="font-weight-bold">Family Discount for second person in the family coming to the Father Daughter Horse Camp does not apply.</p>
             <p class="font-weight-bold">$75 discount for a person who is invited by you and registers who has never been to Blue Bronna before does apply.</p>
-            <a class="btn btn-outline-dark btn-white-navy" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/" target="_blank">Register</a>
+            <a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://bluebronna.wufoo.com/forms/2020-summer-camp-registration">Register</a>
             <div id="imageGallery" class="pt-5">
                 <div class="row">
                     <div class="col-md-4 text-center">
@@ -108,61 +77,12 @@
     </div>
 </div>
 <div id="footer" class="container-fluid">
-    <div class="row col-md-12">
-        <div class="col-md-4 mb-2">
-            <h3 class="font-weight-bold">About Us</h3>
-            <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
-            <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
-            <p><img src="../static/img/member_logo.png"/></p>
-        </div>
-        <div class="col-md-4 mx-auto mb-3">
-            <h3 class="font-weight-bold">Other Links</h3>
-            <ul>
-                <li><a class="contact-text" href="../index.html" target="_self"><i class="fas fa-caret-right"></i> Home</a></li>
-                <li><a class="contact-text" href="../volunteer/needs.html" target="_self"><i class="fas fa-caret-right"></i> Needs</a></li>
-                <li><a class="contact-text" href="../volunteer/index.html" target="_self"><i class="fas fa-caret-right"></i> Volunteer</a></li>
-                <li><a class="contact-text" href="../about/contact-us.html" target="_self"><i class="fas fa-caret-right"></i> Contact Us</a></li>
-                <li><a class="contact-text" href="../privacy-policy/index.html" target="_self"><i class="fas fa-caret-right"></i> Privacy Policy</a></li>
-                <li><a class="contact-text" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/" target="_self"><i class="fas fa-caret-right"></i> Register</a></li>
-
-
-            </ul>
-        </div>
-        <div class="col-md-4 mb-2">
-            <h5 class="font-weight-bold">Contact Us</h5>
-            <div>
-                <p>
-                    <i class="fas fa-phone bb-darkblue"></i><a class="contact-text" href="tel:403-803-4776"> (403)803-4776</a>
-                </p>
-            </div>
-            <div>
-                <p>
-                    <i class="fas fa-envelope bb-darkblue"></i><a class="contact-text" href="mailto:Office@BlueBronna.org" target="_blank"> office@bluebronna.org</a>
-                </p>
-            </div>
-            <div class="mb-2">
-                <p><i class="fas fa-home bb-darkblue"></i> Box 65, Longview, AB T0L 1H0</p>
-            </div>
-            <div>
-                <a class="bb-darkblue media-icon" href="https://www.facebook.com/bluebronna" target="_blank">
-                    <i class="fab fa-facebook-square fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://www.instagram.com/bluebronnawildernesscamp/" target="_blank">
-                    <i class="fab fa-instagram fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://twitter.com/BlueBronna" target="_blank">
-                    <i class="fab fa-twitter-square fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://www.linkedin.com/company/blue-bronna-wilderness-camp" target="_blank">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright text-center py-3 small">
-        Copyright 2019 Created by <a target="_blank" href="http://www.czmoody.com">Curtis Zim Moody</a>.
-    </div>
 </div>
+<script>
+    var THIS_NAV = "schedule";
+    var ROOT_PATH = "..";
+    var STATIC_PATH = ROOT_PATH + "/static/";
+</script>
 <script src="../static/js/base.js"></script>
 </body>
 </html>
