--- a/bluebronna/upcoming-adventures/special-needs-family-camp.html
+++ b/bluebronna/upcoming-adventures/special-needs-family-camp.html
@@ -12,55 +12,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light noselect">
-    <a class="navbar-brand" href="../index.html">
-        <img src="../static/img/bbwc_logo.png" width="120" height="42" class="d-inline-block align-top" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-dropdown" id="adventureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Upcoming Adventures
-                </a>
-                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
-                    <a class="dropdown-item active" href="../upcoming-adventures/schedule.html">Schedule</a>
-                    <a class="dropdown-item" href="../upcoming-adventures/events.html">Events</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-dropdown" id="aboutUsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    About Us
-                </a>
-                <div class="dropdown-menu" aria-labelledby="aboutUsDropdown">
-                    <a class="dropdown-item" href="../about/history.html">History</a>
-                    <a class="dropdown-item" href="../about/locations.html">Locations</a>
-                    <!-- <a class="dropdown-item" href="../about/stories.html">Stories</a> -->
-                    <a class="dropdown-item" href="../about/faq.html">Frequently Asked Questions</a>
-                    <a class="dropdown-item" href="../about/contact-us.html">Contact Us</a>
-                </div>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="../volunteer/index.html">Volunteer</a></li>
-            <li class="nav-item"><a class="nav-link" href="../volunteer/needs.html">Needs</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate</a></li>
-            <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" target="_blank" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/">Register</a></li>
-        </ul>
-    </div>
-</nav>
+<nav id="navigation"></nav>
 <div class="container-fluid hero special-needs-family-camp-hero mb-5">
     <div class="row">
         <div class="upper-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Family Adventures</p>
+                    <p class="text-white font-weight-bold">Special-Needs Family Camp</p>
                 </div>
             </div>
         </div>
         <div class="lower-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Special-Needs Family Camp - Aug 8 to 11</p>
+                    <p class="text-white font-weight-bold">August 6th to August 9th, 2020</p>
                 </div>
             </div>
         </div>
@@ -72,24 +37,23 @@
             <h1 class="font-weight-bold bb-gray">Special-Needs Family Camp</h1>
             <p>This is one of our more popular camps. We have the privilege of finding volunteers to work one on one with your family member who has special needs. This allows us to run activities based on any ability level. Our goal is to help you grow in your walk with God and in your wilderness experience. At the same time we hope you grow as a family and build new friendships with other families. Let’s not forget that we have so much fun. Led by program facilitators that are certified in wilderness first aid, your family will participate in the following activities:</p>
             <ul>
-                <li><i class="fas fa-check-circle"></i> Hiking</li>
-                <li><i class="fas fa-check-circle"></i> Overnight Out-Trips</li>
-                <li><i class="fas fa-check-circle"></i> Canoeing</li>
-                <li><i class="fas fa-check-circle"></i> Rock Climbing</li>
-                <li><i class="fas fa-check-circle"></i> Rappelling</li>
-                <li><i class="fas fa-check-circle"></i> Campfire Cooking</li>
-                <li><i class="fas fa-check-circle"></i> Horseback Riding</li>
-                <li><i class="fas fa-check-circle"></i> Field Games</li>
-                <li><i class="fas fa-check-circle"></i> Campfires</li>
-                <li><i class="fas fa-check-circle"></i> Horse Feeding Chores</li>
-                <li><i class="fas fa-check-circle"></i> Dish Chores</li>
-                <li><i class="fas fa-check-circle"></i> Biblical Teaching Sessions</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Hiking</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Canoeing</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Rock Climbing</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Rappelling</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Campfire Cooking</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Horseback Riding</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Field Games</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Campfires</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Horse Feeding Chores</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Dish Chores</li>
+                <li class="bulletless"><i class="fas fa-check-circle"></i> Biblical Teaching Sessions</li>
             </ul>
             <p>Families will participate in activities together. As well, our program facilitators love to take your kids on an adventure away from camp to give the adults in the family quiet time alone. This camp is located at our Willow Creek site where you will stay in cabins or wall tents. This site has all the amenities that a family could need including indoor plumbing at our washhouse, showers and covered eating and campfire areas. Come enjoy the company of your family, build relationships with other families, encounter God through dynamic teaching and worship times and build memories that will last.</p>
             <p><strong>Start Time: </strong> 7pm Thursday</p>
-            <p><strong>End Time: </strong> 2pm Sunday</p>
-            <p><strong>Cost: </strong> $130 per adult, $80 for youth ages 11-17, $50 for kids ages 6-10, 5 and under free, Family max of $600</p>
-            <a class="btn btn-outline-dark btn-white-navy" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/" target="_blank">Register</a>
+            <p><strong>End Time: </strong> Noon Sunday</p>
+            <p><strong>Cost: </strong> $130 per adult, $80 for youth ages 11-17, $50 for kids ages 6-10, 5 and under free, Family max of $500</p>
+            <a class="btn btn-outline-dark btn-white-navy" href="https://bluebronna.wufoo.com/forms/2020-summer-camp-registration" target="_blank">Register</a>
             <div id="imageGallery" class="pt-5">
                 <div class="row">
                     <div class="col-md-4 text-center">
@@ -108,61 +72,12 @@
     </div>
 </div>
 <div id="footer" class="container-fluid">
-    <div class="row col-md-12">
-        <div class="col-md-4 mb-2">
-            <h3 class="font-weight-bold">About Us</h3>
-            <p>At Blue Bronna Wilderness Camp, we are passionate about providing campers the opportunity to get to know God by experiencing nature through wilderness adventures in the Alberta Rockies.&nbsp;<a class="anchor-darkblue-white" href="../about/history.html" target="_blank">Learn more...</a></p>
-            <p><a class="font-weight-bold anchor-darkblue-white" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">Donate Today <i class="fas fa-arrow-right"></i></a></p>
-            <p><img src="../static/img/member_logo.png"/></p>
-        </div>
-        <div class="col-md-4 mx-auto mb-3">
-            <h3 class="font-weight-bold">Other Links</h3>
-            <ul>
-                <li><a class="contact-text" href="../index.html" target="_self"><i class="fas fa-caret-right"></i> Home</a></li>
-                <li><a class="contact-text" href="../volunteer/needs.html" target="_self"><i class="fas fa-caret-right"></i> Needs</a></li>
-                <li><a class="contact-text" href="../volunteer/index.html" target="_self"><i class="fas fa-caret-right"></i> Volunteer</a></li>
-                <li><a class="contact-text" href="../about/contact-us.html" target="_self"><i class="fas fa-caret-right"></i> Contact Us</a></li>
-                <li><a class="contact-text" href="../privacy-policy/index.html" target="_self"><i class="fas fa-caret-right"></i> Privacy Policy</a></li>
-                <li><a class="contact-text" href="https://bluebronna.wufoo.com/forms/2019-summer-camp-registration-blue-bronna/" target="_self"><i class="fas fa-caret-right"></i> Register</a></li>
-
-
-            </ul>
-        </div>
-        <div class="col-md-4 mb-2">
-            <h5 class="font-weight-bold">Contact Us</h5>
-            <div>
-                <p>
-                    <i class="fas fa-phone bb-darkblue"></i><a class="contact-text" href="tel:403-803-4776"> (403)803-4776</a>
-                </p>
-            </div>
-            <div>
-                <p>
-                    <i class="fas fa-envelope bb-darkblue"></i><a class="contact-text" href="mailto:Office@BlueBronna.org" target="_blank"> office@bluebronna.org</a>
-                </p>
-            </div>
-            <div class="mb-2">
-                <p><i class="fas fa-home bb-darkblue"></i> Box 65, Longview, AB T0L 1H0</p>
-            </div>
-            <div>
-                <a class="bb-darkblue media-icon" href="https://www.facebook.com/bluebronna" target="_blank">
-                    <i class="fab fa-facebook-square fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://www.instagram.com/bluebronnawildernesscamp/" target="_blank">
-                    <i class="fab fa-instagram fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://twitter.com/BlueBronna" target="_blank">
-                    <i class="fab fa-twitter-square fa-2x"></i>
-                </a>
-                <a class="bb-darkblue media-icon" href="https://www.linkedin.com/company/blue-bronna-wilderness-camp" target="_blank">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright text-center py-3 small">
-        Copyright 2019 Created by <a target="_blank" href="http://www.czmoody.com">Curtis Zim Moody</a>.
-    </div>
 </div>
+<script>
+    var THIS_NAV = "schedule";
+    var ROOT_PATH = "..";
+    var STATIC_PATH = ROOT_PATH + "/static/";
+</script>
 <script src="../static/js/base.js"></script>
 </body>
 </html>
