--- a/bluebronna/index.html
+++ b/bluebronna/index.html
@@ -42,10 +42,8 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="./volunteer/index.html">Staff Opportunities</a></li>
                         <li class="nav-item"><a class="nav-link" href="./needs/">Needs</a></li>
-                        <!--
-                        <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="./donate/">Donate</a></li>
-                        <li class="nav-item"><a class="btn btn-outline-secondary mr-2 btn-white-navy" href="./register/">Register</a></li>
-                        -->
+                        <li class="nav-item"><a class="nav-link" href="./donate/">Donate</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./register/">Register</a></li>
                     </ul>
                 </div>
             </nav>
@@ -66,7 +64,7 @@
                     <h1 class="font-weight-bold text-center">Blue Bronna Wilderness Camp</h1>
                     <p class="text-center">This is a description blurb for a quick overview of the camp's mission and location.</p>
                     <div class="row d-flex mb-4">
-                        <div class="col-sm-4 d-flex align-items-stretch">
+                        <div class="col-sm-4 d-flex align-items-stretch justify-content-center">
                             <div class="card shadow" style="width: 18rem;">
                                 <img class="card-img-top" src="./static/img/9.jpg" alt="Willow Creek Site">
                                 <div class="card-body">
@@ -75,7 +73,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4 d-flex align-items-stretch">
+                        <div class="col-sm-4 d-flex align-items-stretch justify-content-center">
                             <div class="card shadow" style="width: 18rem;">
                                 <img class="card-img-top" src="./static/img/10.jpg" alt="Coat Creek Site">
                                 <div class="card-body">
@@ -84,7 +82,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4 d-flex align-items-stretch">
+                        <div class="col-sm-4 d-flex align-items-stretch justify-content-center">
                             <div class="card shadow" style="width: 18rem;">
                                 <img class="card-img-top" src="./static/img/11.jpg" alt="Pack Trips">
                                 <div class="card-body">
@@ -98,11 +96,11 @@
                         <a class="btn btn-outline-dark btn-white-navy" href="./about/contact-us.html">Get Directions</a>
                     </div>
                 </div>
-                <div id="offerings" class="container-fluid jumbotron parallax parallax-landing2 vertical-center">
-                    <div class="mx-auto noselect">
+                <div id="offerings" class="container-fluid jumbotron parallax parallax-landing2 vertical-center noselect">
+                    <div class="noselect container-fluid">
                         <h1 class="landing-header font-weight-bold text-center">Camp Offerings</h1>
                         <div class="row mb-3">
-                            <div class="col-sm-4 d-flex align-items-stretch">
+                            <div class="col-md-4 d-flex align-items-stretch justify-content-center">
                                 <div class="card" style="width: 18rem;">
                                     <img class="card-img-top" src="./static/img/schedule/youth-up/1.jpg" alt="Youth/Teen  Camps">
                                     <div class="card-body">
@@ -112,7 +110,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-4 d-flex align-items-stretch">
+                            <div class="col-md-4 d-flex align-items-stretch justify-content-center">
                                 <div class="card" style="width: 18rem;">
                                     <img class="card-img-top" src="./static/img/schedule/father-daughter-horse-camp/1.jpg" alt="Family Camps">
                                     <div class="card-body">
@@ -122,7 +120,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-4 d-flex align-items-stretch">
+                            <div class="col-md-4 d-flex align-items-stretch justify-content-center">
                                 <div class="card" style="width: 18rem;">
                                     <img class="card-img-top" src="./static/img/schedule/adult.jpg" alt="Adult Camps">
                                     <div class="card-body">
@@ -244,27 +242,27 @@
                     <a class="btn btn-outline-dark btn-white-navy" href="./about/faq.html">More FAQs</a>
                 </div>
             </div>
-            <div class="container-fluid jumbotron parallax parallax-landing vertical-center">
+            <div class="container-fluid jumbotron parallax parallax-landing3 vertical-center mb-0">
                 <div class="container-fluid">
                     <h1 class="landing-header">Get Involved</h1>
-                    <div class="row justify-content-center">
-                        <div class="col-xs-4">
-                            <h3 class="text-white">Donate</h3>
-                            <hr>
-                            <p>Support us financially through donations</p>
-                            <a class="btn btn-outline-dark btn-white-navy" href="./donate/">Donate</a>
+                    <div class="row">
+                        <div class="col-md-4 text-center mb-3">
+                            <h3 class="text-white font-weight-bold">Donate</h3>
+                            <hr class="involved-hr">
+                            <p class="text-white">Support us financially through donations</p>
+                            <a class="btn btn-outline-secondary btn-white-navy-outline" href="./donate/">Donate</a>
                         </div>
-                        <div class="col-xs-4">
-                            <h3 class="text-white">Donate</h3>
-                            <hr>
-                            <p>Support us financially through donations</p>
-                            <a class="btn btn-outline-dark btn-white-navy" href="./donate/">Donate</a>
+                        <div class="col-md-4 text-center mb-3">
+                            <h3 class="text-white font-weight-bold">Staff Opportunities</h3>
+                            <hr class="involved-hr">
+                            <p class="text-white">Join our team</p>
+                            <a class="btn btn-outline-secondary btn-white-navy-outline" href="./volunteer/">See Openings</a>
                         </div>
-                        <div class="col-xs-4">
-                            <h3 class="text-white">Donate</h3>
-                            <hr>
-                            <p>Support us financially through donations</p>
-                            <a class="btn btn-outline-dark btn-white-navy" href="./donate/">Donate</a>
+                        <div class="col-md-4 text-center mb-32">
+                            <h3 class="text-white font-weight-bold">Needs</h3>
+                            <hr class="involved-hr">
+                            <p class="text-white">Support us by donating equipment and resources</p>
+                            <a class="btn btn-outline-secondary btn-white-navy-outline" href="./needs/">See Our Needs</a>
                         </div>
                     </div>
                 </div>
